CDR/ORIGINAL/zlib-1.2.11/configure.log
--------------------
./configure
Tue, Dec  4, 2018  7:50:37 PM
Checking for gcc...
=== ztest1796.c ===
extern int getchar();
int hello() {return getchar();}
===
gcc -c ztest1796.c
... using gcc

Checking for obsessive-compulsive compiler options...
=== ztest1796.c ===
int foo() { return 0; }
===
gcc -c -O3 ztest1796.c

Checking for shared library support...
=== ztest1796.c ===
extern int getchar();
int hello() {return getchar();}
===
gcc -w -c -O3 -fPIC ztest1796.c
-O3 -fPIC -o ztest1796.so ztest1796.o
./configure: line 370: -O3: command not found
(exit code 127)
No shared library support.
Building static library libz.a version 1.2.11 with gcc.

=== ztest1796.c ===
#include <stdio.h>
#include <stdlib.h>
size_t dummy = 0;
===
gcc -c -O3 ztest1796.c
Checking for size_t... Yes.


=== ztest1796.c ===
#include <sys/types.h>
off64_t dummy = 0;
===
gcc -c -O3 -D_LARGEFILE64_SOURCE=1 ztest1796.c
ztest1796.c:2:1: error: unknown type name ‘off64_t’; did you mean ‘_off64_t’?
 off64_t dummy = 0;
 ^~~~~~~
 _off64_t
(exit code 1)
Checking for off64_t... No.

=== ztest1796.c ===
#include <stdio.h>
int main(void) {
  fseeko(NULL, 0, 0);
  return 0;
}
===
gcc -O3 -o ztest1796 ztest1796.c
Checking for fseeko... Yes.

=== ztest1796.c ===
#include <string.h>
#include <errno.h>
int main() { return strlen(strerror(errno)); }
===
gcc -O3 -o ztest1796 ztest1796.c
Checking for strerror... Yes.

=== ztest1796.c ===
#include <unistd.h>
int main() { return 0; }
===
gcc -c -O3 ztest1796.c
Checking for unistd.h... Yes.

=== ztest1796.c ===
#include <stdarg.h>
int main() { return 0; }
===
gcc -c -O3 ztest1796.c
Checking for stdarg.h... Yes.

=== ztest1796.c ===
#include <stdio.h>
#include <stdarg.h>
#include "zconf.h"
int main()
{
#ifndef STDC
  choke me
#endif
  return 0;
}
===
gcc -c -O3 ztest1796.c
Checking whether to use vs[n]printf() or s[n]printf()... using vs[n]printf().

=== ztest1796.c ===
#include <stdio.h>
#include <stdarg.h>
int mytest(const char *fmt, ...)
{
  char buf[20];
  va_list ap;
  va_start(ap, fmt);
  vsnprintf(buf, sizeof(buf), fmt, ap);
  va_end(ap);
  return 0;
}
int main()
{
  return (mytest("Hello%d\n", 1));
}
===
gcc -O3 -o ztest1796 ztest1796.c
Checking for vsnprintf() in stdio.h... Yes.

=== ztest1796.c ===
#include <stdio.h>
#include <stdarg.h>
int mytest(const char *fmt, ...)
{
  int n;
  char buf[20];
  va_list ap;
  va_start(ap, fmt);
  n = vsnprintf(buf, sizeof(buf), fmt, ap);
  va_end(ap);
  return n;
}
int main()
{
  return (mytest("Hello%d\n", 1));
}
===
gcc -c -O3 ztest1796.c
Checking for return value of vsnprintf()... Yes.

=== ztest1796.c ===
#define ZLIB_INTERNAL __attribute__((visibility ("hidden")))
int ZLIB_INTERNAL foo;
int main()
{
  return 0;
}
===
gcc -c -O3 ztest1796.c
ztest1796.c:6:1: warning: visibility attribute not supported in this configuration; ignored [-Wattributes]
 }
 ^Checking for attribute(visibility) support... No.

ALL = static
AR = ar
ARFLAGS = rc
CC = gcc
CFLAGS = -O3
CPP = gcc -E
EXE = .exe
LDCONFIG = ldconfig
LDFLAGS =
LDSHARED = gcc
LDSHAREDLIBC = -lc
OBJC = $(OBJZ) $(OBJG)
PIC_OBJC = $(PIC_OBJZ) $(PIC_OBJG)
RANLIB = ranlib
SFLAGS = -O3 -fPIC
SHAREDLIB =
SHAREDLIBM =
SHAREDLIBV =
STATICLIB = libz.a
TEST = all teststatic
VER = 1.2.11
Z_U4 =
SRCDIR =
exec_prefix = ${prefix}
includedir = ${prefix}/include
libdir = ${exec_prefix}/lib
mandir = ${prefix}/share/man
prefix = /usr/local
sharedlibdir = ${libdir}
uname = CYGWIN_NT-10.0
--------------------


